--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Battleships</title>
 <link rel="stylesheet" type="text/css" href="battlecss.css" />
+<script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="engine.js"></script>
+<script type="text/javascript" src="engine.js"></script>
 </head>
 
 <body>
