Fixed grid size, added start button, minor layout tweaks.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -34,10 +34,13 @@
             <div id="submarine2b" class="ship2"></div>
         </div>
         
+<div id="start" class="button"></div>        
 <div id="title" class="text"></div>
 <div id="player" class="text"></div>
 <div id="enemy" class="text"></div>
 <div id="year" class="text"></div>
+<div id="pencil" class="image"></div>
+
 
 <div id="notes"></div>
 
